# manim-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-push.yml
src/manim_mcp_server/: __init__.py  manim_runner.py  server.py  tools.py
