[project]
name = "manim-mcp-server"
version = "0.1.0"
description = "MCP Server for Manim animation rendering"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0,<2.0",
    "starlette>=0.38",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
